--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
             <div>
-                <img src="ryan.JPG">
+                <img src="ryan.png">
             </div>
     </section>
 
